--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,15 @@ img {
 /*
  * Стили компонента Searchbar
  */
+
+.MagnifyingGlass-wrapper{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+
+}
+
 .searchbar {
   top: 0;
   left: 0;
@@ -78,18 +87,19 @@ img {
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
+  background-color: white;
+  background-image: url('./img/icon.png');
+  background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
-  opacity: 0.6;
+  opacity: 0.5;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
 }
 
 .button:hover {
-  opacity: 1;
+  opacity: 1.1;
 }
 
 .button-label {
@@ -129,11 +139,12 @@ img {
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   padding: 0;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 /*
@@ -182,13 +193,15 @@ img {
 /*
 * Стили компонента Buton (Load more)
 */
-.Button {
+.button-load {
+  margin-left: auto;
+  margin-right: auto;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  display: block;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -203,7 +216,10 @@ img {
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.button:hover,
-.button:focus {
+.wrap{
+  margin-bottom: 30px;
+}
+.button-load:hover,
+.button-load:focus {
   background-color: #303f9f;
 }
